# Extra clean files so that maintainer-clean removes *everything*
DISTCLEANFILES = \
	aclocal.m4 compile config.guess config.sub \
	configure config.h.in depcomp install-sh ltmain.sh     \
	Makefile.in missing

omx_components_sysconfdir= $(sysconfdir)
omx_components_sysconf_DATA = wrs_omxil_components.list

SUBDIRS = videocodec

DIST_SUBDIRS = videocodec
